[project]
name = "px"
authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
description = "npx but for python"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
  "pydantic>2.0",
  "typer>=0.12.5,<0.13",
  "tomli>=2.0.1,<3",
  "tomli-w>=1.0.0,<2",
  "rich>=13.8.1,<14"
]

[project.scripts]
px = "px.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
px = { path = ".", editable = true }

[tool.pixi.feature.fdev.dependencies]
ruff = "*"
hatch = "*"
pytest = "*"

[tool.pixi.feature.fdev.tasks]
build = "hatch build ./dist"

#[tool.pixi.tasks]

[tool.pixi.environments]
dev = { features = ["fdev"] }
prod = { features = [] }

[tool.ruff]
target-version = "py310"
