[project]
name = "python-px"
authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
description = "npx but for python"
version = "0.0.6"
requires-python = ">= 3.10"
dependencies = [
  "pydantic>2.0",
  "typer>=0.12.5,<0.13",
  "rich>=13.8.1,<14"
]

[project.scripts]
px = "px.main:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = ["px"]  # account for the discrepancy between the directroy 'px' and the pypi name 'python-px'

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64", "osx-arm64", "win-64"]

[tool.pixi.pypi-dependencies]
python-px = { path = ".", editable = true }

[tool.pixi.feature.fdev.dependencies]
ruff = "*"
hatch = "*"
pytest = "*"

[tool.pixi.feature.fdev.tasks]
build = "hatch build ./dist"

#[tool.pixi.tasks]

[tool.pixi.environments]
dev = { features = ["fdev"] }
prod = { features = [] }
